--- a/mcp-tools/requirements.txt
+++ b/mcp-tools/requirements.txt
@@ -12,4 +12,7 @@ tenacity==8.2.3
 structlog==23.2.0
 pytest==7.4.3
 pytest-asyncio==0.21.1
-httpx==0.25.1 
+httpx==0.25.1
+pytest-cov==4.1.0
+ruff==0.1.6
+mypy==1.7.0 
